# lsimons-bot

./: AGENTS.md  README.md  app.py  app_oauth.py  pyproject.toml  requirements.txt
.beads/: issues.jsonl
.github/: copilot-instructions.md
docs/: agent-setup.md
docs/spec/: 002-slack-client.md  002-slack-listener-patterns.md
history/: PHASE_1_COMPLETION.md  PHASE_2_COMPLETION.md  PHASE_4_COMPLETION.md
listeners/: __init__.py  _assistant_utils.py  _llm.py  _prompt.py
listeners/actions/: __init__.py  assistant_feedback.py
listeners/commands/: __init__.py
listeners/events/: __init__.py  assistant_thread_started.py  assistant_user_message.py
listeners/messages/: __init__.py
listeners/shortcuts/: __init__.py
listeners/views/: __init__.py
lsimons_bot/: __init__.py  config.py
lsimons_bot/app/: config.py  main.py
lsimons_bot/assistant/: __init__.py  assistant_message.py  assistant_thread_started.py
lsimons_bot/home/: __init__.py  app_home_opened.py
lsimons_bot/listeners/: __init__.py
lsimons_bot/llm/: __init__.py  client.py  context.py  exceptions.py  prompt.py
lsimons_bot/messages/: __init__.py  message.py
lsimons_bot/slack/: __init__.py  exceptions.py
tests/: test_app.py  test_config.py  test_home.py
tests/app/: test_config.py  test_main.py
tests/assistant/: test_assistant_message.py  test_assistant_thread_started.py  test_init.py
tests/listeners/: _test_prompt.py  test_listener_registration.py  test_llm.py
tests/llm/: test_client.py  test_context.py  test_prompt.py
tests/messages/: test_app_mention.py  test_init.py  (+1 more)
(+15 files in other folders)
