[project]
name = "lsimons-bot"
version = "0.1.0"
description = "Slack Bot that automates part of Leo Simons' (lsimons) work at Schuberg Philis"
requires-python = ">=3.13"

[tool.black]
line-length = 125

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
